--- a/index.html
+++ b/index.html
@@ -20,15 +20,33 @@
         <div class="digit">#</div>
       </div>
       <div class="card__holder">
-        <label class="card__holder__label">CARD HOLDER</label>
+        <label class="card__holder__label">Card Holder</label>
         <div class="card__holder__name">name</div>
       </div>
-      <div class="card__expiry"></div>
+      <div class="card__expiry">
+        <label class="card__expiry__label">Expires</label><br/>
+        <div class="card__month">MM</div>/<div class="card__year">YY</div>
+      </div>
     </div>
     <div class="card__back">
       <div class="card__cvv"></div>
     </div>
   </div>
 
-  <div class="form"></div>
+  <div class="form">
+    <label for="form__number" id="form__number__label">Card Holder Name</label>
+    <input type="text" id="form__number"></input>
+
+    <label for="form__name" id="form__name__label">Card Holder Name</label>
+    <input type="text" id="form__name"></input>
+
+    <label for="form__month" id="form__month__label">Card Holder Name</label>
+    <input type="text" id="form__month"></input>
+
+    <label for="form__year" id="form__year__label">Card Holder Name</label>
+    <input type="text" id="form__year"></input>
+
+    <label for="form__cvv" id="form__cvv__label">Card Holder Name</label>
+    <input type="text" id="form__cvv"></input>
+  </div>
 </div>
