--- a/index.html
+++ b/index.html
@@ -1,52 +1,67 @@
-<div class="container">
-  <div class="card">
-    <div class="card__front">
-      <div class="card__chip"></div>
-      <div class="card__type"></div>
-      <div class="card__number">
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        &nbsp;&nbsp;
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        &nbsp;&nbsp;
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        <div class="digit">#</div>
-        <div class="digit">#</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="form.css">
+  <link rel="stylesheet" href="card.css">
+</head>
+<body>
+  <div class="container">
+    <div class="card">
+      <div class="card__front">
+        <div class="card__chip"></div>
+        <div class="card__type"></div>
+        <div class="card__number">
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          &nbsp;&nbsp;
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          &nbsp;&nbsp;
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+          <div class="digit">#</div>
+        </div>
+        <div class="card__holder">
+          <label class="card__holder__label">Card Holder</label>
+          <div class="card__holder__name">name</div>
+        </div>
+        <div class="card__expiry">
+          <label class="card__expiry__label">Expires</label><br/>
+          <div class="card__month">MM</div>/<div class="card__year">YY</div>
+        </div>
       </div>
-      <div class="card__holder">
-        <label class="card__holder__label">Card Holder</label>
-        <div class="card__holder__name">name</div>
-      </div>
-      <div class="card__expiry">
-        <label class="card__expiry__label">Expires</label><br/>
-        <div class="card__month">MM</div>/<div class="card__year">YY</div>
+      <div class="card__back">
+        <div class="card__cvv"></div>
       </div>
     </div>
-    <div class="card__back">
-      <div class="card__cvv"></div>
+  
+    <div class="form">
+      <label for="form__number" id="form__number__label">Card Number</label>
+      <input type="text" id="form__number"></input>
+  
+      <label for="form__name" id="form__name__label">Card Holder Name</label>
+      <input type="text" id="form__name"></input>
+  
+      <label for="form__year" id="form__expiry__label">Expiration Date</label>
+      <input type="select" id="form__month"></input>
+  
+      <input type="select" id="form__year"></input>
+  
+      <label for="form__cvv" id="form__cvv__label">CVV</label>
+      <input type="text" id="form__cvv"></input>
     </div>
   </div>
-
-  <div class="form">
-    <label for="form__number" id="form__number__label">Card Holder Name</label>
-    <input type="text" id="form__number"></input>
-
-    <label for="form__name" id="form__name__label">Card Holder Name</label>
-    <input type="text" id="form__name"></input>
-
-    <label for="form__month" id="form__month__label">Card Holder Name</label>
-    <input type="text" id="form__month"></input>
-
-    <label for="form__year" id="form__year__label">Card Holder Name</label>
-    <input type="text" id="form__year"></input>
-
-    <label for="form__cvv" id="form__cvv__label">Card Holder Name</label>
-    <input type="text" id="form__cvv"></input>
-  </div>
-</div>
+  <script src="index.js">
+  </script>
+</body>
+</html>
